---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    let bits: [bool; 3] = x.to_le_bits();
    assert(!bits[0_u32]);
    assert(bits[1_u32]);
    assert(!bits[2_u32]);
}
